traducao para pt/br

--- a/app/panels/home.html
+++ b/app/panels/home.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="block-play">
-      <div class="player-connect-number">Ping servidor boberto.net</div>
+      <div class="player-connect-number">Jogadores conectados</div>
       <button class="play-btn">Jogar</button>
       <div class="info-download">Verificação</div>
       <progress value="0" max="0" class="progress-bar"></progress>
@@ -13,7 +13,7 @@
 
 
     <div class="player-connect-head">
-      <div class="player-connect-head-text">Jogador conectado</div>
+      <div class="player-connect-head-text">Status servidor</div>
       <div class="player-connect">Ping servidor boberto.net</div>
     </div>
 
