--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -2,12 +2,12 @@
     <div class="overlay">
 
         <div class="settingsNavbtn">
-            <button class="settingsbtn accountsettings">Account</button>
+            <button class="settingsbtn accountsettings">Conta</button>
             <button class="settingsbtn ramsettings">Ram</button>
             <button class="settingsbtn javasettings">Java</button>
-            <button class="settingsbtn resolutionsettings">Resolution</button>
-            <button class="settingsbtn launchersettings">Launcher</button>
-            <button class="settingsbtn settingsSave">sauvegarder</button>
+            <button class="settingsbtn resolutionsettings">Resolução</button>
+            <button class="settingsbtn launchersettings">Laucher</button>
+            <button class="settingsbtn settingsSave">Salvar</button>
         </div>
     </div>
 
@@ -15,7 +15,7 @@
     
 
     <div class="tabsettings accountsettingstab">
-      <button class="singout">singout</button>
+      <button class="singout">Sair</button>
     </div>
 
 
@@ -38,9 +38,9 @@
 
 
     <div class="tabsettings resolutionsettingstab" style="display:none;">
-        <div class="text-settings">Modifier la résolution de votre jeu au lancement de Minecraft.<br>
-        Définissez une résolution personnalisée ou choisissez-en une dans la liste en fonction de la taille de votre écran.<br>
-        Vous pouvez aussi faire démarrer Minecraft automatiquement en plein écran.</div>
+        <div class="text-settings">Altere a resolução do jogo ao iniciar o Minecraft.<br>
+          Defina uma resolução personalizada ou escolha uma na lista de acordo com o tamanho da tela. <br>
+          Você também pode fazer o Minecraft iniciar automaticamente em tela inteira.</div>
         <input type="text" class="width"/>
         <input type="text" class="height"/>
     </div>
@@ -50,17 +50,17 @@
     <div class="tabsettings launchersettingstab" style="display:none;">
         <div>
           <input type="checkbox" class="NewsAutoRefreshSettings">
-          <label class="">Actualiser les actualités automatiquement.</label>
+          <label class="">Atualize as notícias automaticamente.</label>
         </div>
 
         <div>
           <input type="checkbox" class="StatusServerAutoRefreshSettings">
-          <label class="">Actualiser le statut serveur automatiquement.</label>
+          <label class="">Atualize o status do servidor automaticamente.</label>
         </div>
 
         <div>
           <input type="checkbox" class="CloseLauncherSettings">
-          <label class="">Garder le launcher ouvert après le démarrage du jeu.</label>
+          <label class="">Mantenha o launcher aberto após iniciar o jogo.</label>
         </div>
     </div>
 </div>
