--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <div id="splash" style="display:none">
       <div class="drag"></div>
       <img class="splash" src="assets/images/icons/icon.png"/>
+      <h1>Carregando a sua diversão.. bobertástica...</h1>
       <p class="splash-message"></p>
       <p class="splash-author"><span class="author"></span></p>
       <p class="message"></p>
