--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -6,7 +6,7 @@
             <button class="settingsbtn ramsettings">Ram</button>
             <button class="settingsbtn javasettings">Java</button>
             <button class="settingsbtn resolutionsettings">Resolução</button>
-            <button class="settingsbtn launchersettings">Laucher</button>
+            <button class="settingsbtn launchersettings">Launcher</button>
             <button class="settingsbtn settingsSave">Salvar</button>
         </div>
     </div>
