--- a/app/panels/home.html
+++ b/app/panels/home.html
@@ -8,6 +8,11 @@
       <div class="player-connect-number">Jogadores conectados</div>
       <button class="play-btn">Jogar</button>
       <div class="info-download">Verificação</div>
+
+      <div class="force-play-group">
+        <input type="checkbox" id="force-play" name="force-play">
+        <label for="force-play">Forçar atualização</label>
+      </div>
       <progress value="0" max="0" class="progress-bar"></progress>
     </div>
 
