iniciando multiplas versões

--- a/app/panels/home.html
+++ b/app/panels/home.html
@@ -5,6 +5,18 @@
     </div>
 
     <div class="block-play">
+      <div class="modpack-list">
+        <label for="modpack-text">Modpacks disponíveis</label>
+        <select class="select-modpacks">
+        </select>
+        <div class="modpack-info">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus dictum magna, a scelerisque erat interdum eget. Donec elementum felis ut molestie mattis. In orci nisi, congue non diam ut, mollis posuere ligula. Sed luctus est eu purus iaculis iaculis. Donec scelerisque felis nibh, eget posuere dui euismod vitae. Donec molestie metus eu nulla venenatis, nec convallis neque scelerisque. Praesent quis sodales dui. Morbi mollis non lorem ac congue. Praesent porttitor neque nisl, nec elementum urna luctus sed. Praesent eu dapibus elit, in viverra arcu.
+
+Morbi id lectus risus. Aenean commod
+        </div>
+      </div>
+       
+      
       <div class="player-connect-number">Jogadores conectados</div>
       <button class="play-btn">Jogar</button>
       <div class="info-download">Verificação</div>
