fixando sistema de status

--- a/app/panels/home.html
+++ b/app/panels/home.html
@@ -5,6 +5,11 @@
     </div>
 
     <div class="block-play">
+
+      <!-- <div class="splash-loading" style="display:none">
+        <h1>Carregando modpack..</h1>
+      </div> -->
+
       <div class="modpack-list">
         <label for="select-modpacks">Modpacks disponíveis</label>
         <select class="select-modpacks">
