mudando sistema de autenticacao

--- a/app/panels/login.html
+++ b/app/panels/login.html
@@ -29,8 +29,14 @@
               </div>
 
               <p class="text-left online loginSpanDim">Esqueceu sua senha?</p>
+              <p class="text-left online loginSpanNoAuth">Entrar sem conta</p>
+              <p class="text-left online loginSpanPremium">Entrar com conta mojang ou microsoft</p>
+
+
               <button class="btn login-btn btn-primary uzurionAppLoginCardSubmit text-uppercase">Conectar</button>
+
               <button class="ml-4 microsoft-btn"><img src="./assets/images/logo/microsoft.png" style="border-radius:10px;" width="44"></button>
+
             </div>
           </div>
         </div>
