--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -15,7 +15,8 @@
     
 
     <div class="tabsettings accountsettingstab">
-      <button class="singout">Sair</button>
+      <button class="noauth">Sem autenticação</button>
+      <button class="premium">Premium</button>
     </div>
 
 
