--- a/app/index.html
+++ b/app/index.html
@@ -14,5 +14,14 @@
       <progress value="0" max="0"></progress>
     </div>
     <script src="assets/js/index.js" type="module"></script>
+    <!-- <script>
+      var path = './',
+        fs = require('fs');
+      fs.watch(path, function() {
+        if (location) location.reload();
+      });
+      </script> -->
+      
+      
   </body>
 </html>
