versao pronta para deploy

--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,13 @@
       <progress value="0" max="0"></progress>
     </div>
     <script src="assets/js/index.js" type="module"></script>
-    <script>
+    <!-- <script>
       var path = './',
         fs = require('fs');
       fs.watch(path, function() {
         if (location) location.reload();
       });
-      </script>
+      </script> -->
       
       
   </body>
