fixing some issues on design

--- a/app/launcher.html
+++ b/app/launcher.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="assets/css/launcher.css">
   </head>
 </head>
+
 <body class="hide">
     <div class="dragbar"></div>
+    <div class="title_bar_launcher"></div>
+
     <div class="frame">
       <div id="minimize" class="button-frame icon-minimize"></div>
       <div id="maximize" class="button-frame icon-maximize"></div>
