--- a/app/launcher.html
+++ b/app/launcher.html
@@ -11,8 +11,9 @@
 </head>
 
 <body class="hide">
-    <div class="dragbar"></div>
-    <div class="title_bar_launcher"></div>
+    <div class="dragbar">
+      <div class="titlebar-launcher-frame"></div>
+    </div>
 
     <div class="frame">
       <div id="minimize" class="button-frame icon-minimize"></div>
