init multi lang system

--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -63,5 +63,13 @@
           <input type="checkbox" class="CloseLauncherSettings">
           <label class="">Mantenha o launcher aberto após iniciar o jogo.</label>
         </div>
+
+        <div class="language-list">
+          <label for="select-language">Language avaible</label>
+          <select class="select-language">
+          </select>
+          <div class="language-info">
+          </div>
+        </div>
     </div>
 </div>
