--- a/app/panels/home.html
+++ b/app/panels/home.html
@@ -27,7 +27,7 @@
 
       <div class="force-play-group">
         <input type="checkbox" id="force-play" name="force-play">
-        <label for="force-play">Forçar atualização</label>
+        <label class="force-update" for="force-play">Forçar atualização</label>
       </div>
       <progress value="0" max="0" class="progress-bar"></progress>
     </div>
