--- a/app/panels/home.html
+++ b/app/panels/home.html
@@ -41,8 +41,8 @@
     <div class="news">
       <div class="news-text">Notícias bobertásticas</div>
       <div class="container-news"></div>
-      <p class="text-left online news_button">Próximo</p>
-      <p class="text-left online news_button">Anterior</p>
+      <p class="news-next">Próximo</p>
+      <p class="news-before">Anterior</p>
 
 
     </div>
