--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -51,21 +51,21 @@
     <div class="tabsettings launchersettingstab" style="display:none;">
         <div>
           <input type="checkbox" class="NewsAutoRefreshSettings">
-          <label class="">Atualize as notícias automaticamente.</label>
+          <label class="checkbox-refresh-news">Atualize as notícias automaticamente.</label>
         </div>
 
         <div>
           <input type="checkbox" class="StatusServerAutoRefreshSettings">
-          <label class="">Atualize o status do servidor automaticamente.</label>
+          <label class="checkbox-refresh-server-status">Atualize o status do servidor automaticamente.</label>
         </div>
 
         <div>
           <input type="checkbox" class="CloseLauncherSettings">
-          <label class="">Mantenha o launcher aberto após iniciar o jogo.</label>
+          <label class="checkbox-launcher-open">Mantenha o launcher aberto após iniciar o jogo.</label>
         </div>
 
         <div class="language-list">
-          <label for="select-language">Language avaible</label>
+          <label class="select-label-language" for="select-language">Language avaible</label>
           <select class="select-language">
           </select>
           <div class="language-info">
