added server list

--- a/app/panels/home.html
+++ b/app/panels/home.html
@@ -11,13 +11,10 @@
       </div> -->
 
       <div class="modpack-list">
-        <label for="select-modpacks">Modpacks disponíveis</label>
+        <label for="select-modpacks" class="modpack_label">Modpacks disponíveis</label>
         <select class="select-modpacks">
         </select>
-        <div class="modpack-info">
-          <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc maximus dictum magna, a scelerisque erat interdum eget. Donec elementum felis ut molestie mattis. In orci nisi, congue non diam ut, mollis posuere ligula. Sed luctus est eu purus iaculis iaculis. Donec scelerisque felis nibh, eget posuere dui euismod vitae. Donec molestie metus eu nulla venenatis, nec convallis neque scelerisque. Praesent quis sodales dui. Morbi mollis non lorem ac congue. Praesent porttitor neque nisl, nec elementum urna luctus sed. Praesent eu dapibus elit, in viverra arcu.
-          Morbi id lectus risus. Aenean commod -->
-        </div>
+        <div class="modpack-info"></div>
       </div>
        
       
@@ -35,7 +32,7 @@
 
     <div class="player-connect-head">
       <div class="player-connect-head-text">Status servidor</div>
-      <div class="player-connect">Ping servidor boberto.net</div>
+      <div class="player-connect"></div>
     </div>
 
     <div class="news">
