--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -33,6 +33,8 @@
         <input type="text" value="" class="path" disabled/>
         <input type="button" value="Changer" class="path-button"/>
         <input type="file" class="path-file" style="display:none;" accept="application/octet-stream"/>
+        <br>
+        <input type="text" value="" class="java_args"/>
     </div>
 
 
