--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -66,6 +66,11 @@
           <label class="checkbox-launcher-open">Mantenha o launcher aberto após iniciar o jogo.</label>
         </div>
 
+        <div class="favoritemodpack">
+          <label class="select-label-modpackfavorite" for="select-modpackfavorite">Choose favorite modpack</label>
+          <select class="select-modpackfavorite"></select>
+        </div>
+
         <div class="language-list">
           <label class="select-label-language" for="select-language">Language avaible</label>
           <select class="select-language">
