--- a/app/panels/settings.html
+++ b/app/panels/settings.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="favoritemodpack">
-          <label class="select-label-modpackfavorite" for="select-modpackfavorite">Choose favorite modpack</label>
+          <label class="select-label-modpackfavorite" for="select-modpackfavorite">Modpack favorito:</label>
           <select class="select-modpackfavorite"></select>
         </div>
 
